Fix footer ul alignment

--- a/src/PROCERGS/LoginCidadao/CoreBundle/Resources/public/css/general.css
+++ b/src/PROCERGS/LoginCidadao/CoreBundle/Resources/public/css/general.css
@@ -157,7 +157,7 @@ footer h3 {
 }
 
 footer ul {
-    padding: 10px 40px;
+    padding: 10px 15px;
 }
 
 footer li {
